--- a/login.html
+++ b/login.html
@@ -65,7 +65,7 @@ input[type=submit]:hover {
 <a href="/signup.html">SignUp</a><b>Here</b>
 <br>
 <br>
-<a href="/forgettenpassword.html"> forgettenpassword ?</a></p>
+<a href="./forgettenpassword.html"> forgettenpassword ?</a></p>
 
 </form>
 </body>
