--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ input[type=submit]:hover {
     <input type="submit" value="submit" >
 <br><br>
 <p style="text-align: center;"> <b>Already have an Account!</b></p>
-<a href="/login.html">Login</a>
+<a href="./login.html">Login</a>
 </form>
 </body>
 </html>
