creating web page

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ input[type=submit]:hover {
     </style>
 </head>
 <body>
-    <form action="/last.html" style="text-align: center;">
+    <form action="./last.html" style="text-align: center;">
     <h1><b>SignUp Here</b></h1>
     <input type="text" name="username" placeholder="Username" width="100%">
     <br><br>
