--- a/login.html
+++ b/login.html
@@ -62,7 +62,7 @@ input[type=submit]:hover {
     <input type="submit" value="Login" >
 <br><br>
 <p style="text-align: center;"><b>I do not have Account</b>
-<a href="/signup.html">SignUp</a><b>Here</b>
+<a href="./signup.html">SignUp</a><b>Here</b>
 <br>
 <br>
 <a href="./forgettenpassword.html"> forgettenpassword ?</a></p>
